// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatMessage returns a list of strings suitable for console logging 1`] = `
Array [
  "%c apollo %cquery %cFormatMessageQuery %c(in 1000 ms)",
]
`;

exports[`formatMessage returns a list of strings suitable for console logging 2`] = `
Array [
  "%c apollo %cmutation %cFormatMessageMutation %c(in 500 ms)",
]
`;
